# novaport-mcp

./: .coverage  .dockerignore  .env  .env.example  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  NOTICE  README.md  RELEASE_NOTES.md  SECURITY.md  UPDATE_GUIDE.md  alembic.ini  conport.db  coverage.xml  coverage_report.txt  pyproject.toml
.github/workflows/: test.yml
conport-custom-instructions/: generic_conport_strategy.yml
docs/: deep_dive.md
novaport-mcp-custom-instructions/: generic_conport_strategy.yml
src/conport/: __main__.py  app_factory.py  main.py
src/conport/api/: batch.py  context.py  custom_data.py  decisions.py  history.py  io.py  links.py  meta.py  progress.py  search.py  system_patterns.py
src/conport/core/: config.py
src/conport/db/: database.py  models.py
src/conport/db/alembic/: env.py
src/conport/db/alembic/versions/: 0acdbf88bb28_initial_schema.py  1b5d040e63a5_add_context_links_table.py  31096a679db4_initial_schema_with_all_models.py  65f852b29fd2_add_context_links_table.py  7a0c9b63f8b9_initial_schema.py  7e1b6687bc49_initial_migration_with_decisions_table.py  846450266f55_initial_schema_with_all_models.py  8e564e4b33c5_final_complete_schema_with_links_and_.py  d15c76de3f34_add_all_core_models.py
src/conport/schemas/: batch.py  context.py  custom_data.py  decision.py  error.py  history.py  link.py  progress.py  search.py  system_pattern.py
src/conport/services/: context_service.py  custom_data_service.py  decision_service.py  history_service.py  io_service.py  link_service.py  meta_service.py  progress_service.py  system_pattern_service.py  vector_service.py
src/novaport_mcp/: __main__.py  main.py
src/novaport_mcp/api/: custom_data.py  decisions.py  history.py  io.py  links.py  progress.py
src/novaport_mcp/core/: config.py
src/novaport_mcp/db/: database.py  models.py
src/novaport_mcp/db/alembic/: env.py
src/novaport_mcp/schemas/: batch.py  context.py  custom_data.py  decision.py  link.py  progress.py  search.py
src/novaport_mcp/services/: context_service.py  decision_service.py  io_service.py  meta_service.py  system_pattern_service.py  vector_service.py
test_workspace_io/complex_export/: decisions.md
test_workspace_io/import_test/: decisions.md
test_workspace_io/malformed_import/: decisions.md
test_workspace_io/my_custom_export_folder/: decisions.md
test_workspace_io/test_export/: decisions.md
tests/: test_database_coverage.py  test_main.py  test_main_async.py  test_schemas_coverage.py  test_services_coverage.py  test_vector_service_coverage.py
tests/test_api/: test_batch.py  test_context.py  test_decisions.py  test_history_extended.py  test_io.py  test_links.py  test_meta_extended.py  test_search.py  test_utils.py
